Changelog

2013/10/03
	Changes:
		- Set up repo, changelog and diary.
		- Created perl2python.pl

2013/10/04
	Changes:
		- Implemented input of data to a single string format

2013/10/05
	Changes:
		- Added a regex command to split the code string by semicolons, curly brackets and comments
		- Code for removing semicolons, swapping curly brackets out added 
		- Python flow control (conversion from curly brackets to indentation) handled (note - will conflict with hashes)

2013/10/08
	Changes:
		- Handled variable basics - removing dollar signs
		- Still does not handle reserved characters in strange places (e.g. $ ; {} in strings or regex statements)
		- Turns strings with variables inside them into a python readable form (doesn't handle . concat at the moment)
		- Converts ++ and -- to a python usable format (+=1 and -=1)

2013/10/09
	Changes:
		- Standardised in-line function display
		- Handled "last" and detected "print" functions

	High Priority To-Do:
		- Look into how perl functions can be written, EXACT SYNTACTICAL RULES - semantics are important
		- Method for function recognition and replacement (including nested functions) - possibly recursive?

	Low Priority To-Do:
		- Recognise hashes in initial parsing (lack of semi-colons?)
		- Rewrite parser yourself
		- Handle python imports
