@@ -14,3 +14,7 @@ Date		Start	Stop	Activity		Comments
 2013/10/08			15:45					Wrote Regex to handle ++ and -- to python conversion
 2013/10/09	03:00							Standardised function representation
 2013/10/09			04:30					Detected and handled some functions (print and last)
+2013/10/09	09:40			Coding			Handled logical operators
+											Managed basic while, if, else, elif
+2013/10/09			10:40					Handled next (continue in python)
+
